# RClangSimple

./: .Rbuildignore  .gitignore  Changes  DESCRIPTION  FAQ.xml  GenerationNotes  INSTALL.md  NAMESPACE  Next  Notes  README.md  TODO  Todo.xml  Updates  Windows  cleanup  configure  configure.ac  configure.in  configure.win  egs.R  getRDefines.r  notDone.R  template.Rd  testRoutines.R  version.c  versions.md
Paper/: GNUmakefile  Outline  RClang.tex  clangConcepts.tex  latexSkip.el  makeASTreeFigure.R  mutability.tex  mutabilityFigure.tex  protect.tex  protectCodeFigure.tex  rclang.bib  rffi.R  rffi.c  rffi.tex  rffiEg.r  sinLogASFig.tex  sinLogAST_tikz.tex  visitBarOnly.R  whyClang.tex  writingVisitorFunctions.tex
R/: A.R.in  AA.R  CXCallingConv.R  CXChildVisitResult.R  CXDiagnosticDisplayOptions.R  CXGlobalOptFlags.R  CXLanguageKind.R  CXLinkageKind.R  CXTokenKind.R  CXTranslationUnit_Flags.R  CXTypeKind.R  CX_CXXAccessSpecifier.R  IRTemplateTools.R  RIncludePath.R  aClasses.R  aTypeClasses.R  a_enumDefs_10.0.R  a_enumDefs_11.0.R  a_enumDefs_12.0.R  a_enumDefs_13.0.R  a_enumDefs_14.0.R  a_enumDefs_15.0.R  a_enumDefs_16.0.R  a_enumDefs_17.0.R  a_enumDefs_18.1.R  a_enumDefs_3.5.R  a_enumDefs_3.7.R  a_enumDefs_3.7e.R  a_enumDefs_3.8.R  a_enumDefs_3.9.R  a_enumDefs_4.0.R  a_enumDefs_7.0.R  a_enumDefs_8.0.R  access.R  assignTo.R  b_check.R  binOp.R  callGraph.R  clang.R  clangGen.R  (+23 more)
Rexamples/: egs.R  getDataTypes.R  getRDefines.r  notDone.R  readRCode.R  testCodeGen.r  testRoutines.R
TU/: tu.R
Web/: GNUmakefile  index.html.in
explorations/: callGraph.R  getFunctions.Rprof  includes.R  multipleTUs.R  mutateInputs.R  protect.R
howto/: installClang.Rdb
inst/FFI/: ffi.R
inst/TU/: GNUmakefile  cindex.c.001t.tu  clang.R  enums.R  genEnums.R  routines.R  writeEnums.R
inst/bootstrap/: boot.R
inst/doc/: Bootstrap.Rdb  Design.Rdb  RClangSimple.Rdb  evalGlobalEnv.R  evalGlobalEnv.md  ffi.Rdb
inst/exampleCode/: a.h  args.c  array.c  assignment.c  b.h  bar.c  bob.c  bool.cpp  c.h  calls.cpp  class.cpp  classPure.cc  comments.c  const.c  defines.c  enum.cpp  enumRepeat.c  enums.c  enums2.c  enums3.c  enums4.c  error.c  fib.c  file.h  file1.c  file2.c  funPointer.R  funPointer.c  func.c  getconf.R  globalUse.c  graph.c  includes.c  macros.c  mutateArg.c  namespace.cpp  preprocessor.c  protectCorrect.c  protectError.c  protectIncorrect.c  (+12 more)
inst/explorations/: callGraph.R  cuda.R  includes.R  multipleTUs.R  mutateInputs.R  protect.R  rglobals.R  static.R
inst/generateCode/: REnum.R  createProxyRCall.R  eg.r  enumRClass.R  getRTypeName.R  makeCode.R  mk.r  native.R  nativeEnum.R  rfuncs.R  struct.R  typeMap.R  utils.R
man/: CXCallingConv.Rd  CXChildVisit_Break.Rd  CXCursorExceptionSpecificationKind.Rd  CXCursorKind.Rd  CXIndex_getGlobalOptions.Rd  CXLanguageKind.Rd  CXLinkageKind.Rd  CXTokenKind.Rd  CXTypeKind.Rd  CX_CXXAccessSpecifier.Rd  Comment_getChild.Rd  Cursor_getArgument.Rd  Module_getFullName.Rd  children.Rd  clangVersion.Rd  clone.Rd  coerce.Rd  createRegistrationCode.Rd  cxEnums.Rd  defaultDiagnosticDisplayOptions.Rd  enableStackTraces.Rd  equalCursors.Rd  findAssignTo.Rd  findCalls.Rd  genFunctionCollector.Rd  getAncestorByKind.Rd  getArgType.Rd  getArraySize.Rd  getCXTUResourceUsage.Rd  getCallableRoutines.Rd  getChildren.Rd  getCppClasses.Rd  getCursorTokens.Rd  getDataStructures.Rd  getDefines.Rd  getEnums.Rd  getFileName.Rd  getFunctions.Rd  getGlobalVariables.Rd  getIncludes.Rd  (+18 more)
src/: Makevars  Makevars.in  Makevars.win  Makevars.win.in  RClang.h  RConverters.h  clang.c  clangGen.c  enumCode.c  enumDecls.h  ffiEg.c  structDecls.h
tests/: checkTUGen.R  children.R  cpp.R  diagnostics.R  enum.c  fib.R  fnPointer.R  globals.R  inclusions.R  index.R  module.R  rclasses.R  refCount.R  refCountType.R  register.R  routineLocations.R  setIndexOptions.R  simple.R  templateClass.cc  tildeEnum.R  tuOptions.R  usage.R
